# com-rs

./: .azure-pipelines.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.ci/: install-rust.yml
.github/workflows/: ci-workflow.yml
client/: Cargo.toml
client/src/: main.rs
com_interface_attribute/: Cargo.toml
com_interface_attribute/src/: aggr_com_class.rs  com_class.rs  com_interface_impl.rs  comptr_impl.rs  iid.rs  lib.rs  utils.rs  vptr.rs  vtable.rs  vtable_macro.rs
common/: Cargo.toml
common/src/: comptr.rs  iclassfactory.rs  iunknown.rs  lib.rs
docs/: AGGREGATION.md  aggregation.md  basic-usage.md  com_inproc_dll_module_target.rs  iclassfactory_target.rs  iunknown_target.rs  safety.md
examples/: webview2.rs
examples/aggregation/: Cargo.toml  README.md
examples/aggregation/client/: Cargo.toml
examples/aggregation/client/src/: main.rs
examples/aggregation/interface/src/: ifile_manager.rs  ifilemanager.rs  ilocal_file_manager.rs  ilocalfilemanager.rs  lib.rs
examples/aggregation/server/: Cargo.toml
examples/aggregation/server/src/: lib.rs  local_file_manager.rs  local_file_manager_class.rs  macro_test.rs  mod.rs  windows_file_manager.rs  windows_file_manager_class.rs
examples/basic/: Cargo.toml  README.md
examples/basic/client/: Cargo.toml
examples/basic/client/src/: main.rs
examples/basic/interface/: Cargo.toml
examples/basic/interface/src/: ianimal.rs  icat.rs  icat_class.rs  idomesticanimal.rs  iexample.rs  ifilemanager.rs  ilocalfilemanager.rs  lib.rs
examples/basic/no_std_com/: Cargo.toml
examples/basic/server/: Cargo.toml
examples/basic/server/src/: british_short_hair_cat.rs  british_short_hair_cat_class.rs  lib.rs  local_file_manager.rs  local_file_manager_class.rs  macro_test.rs  mod.rs  windows_file_manager.rs  windows_file_manager_class.rs
examples/basic/server/src/implementation/: british_short_hair_cat.rs  mod.rs  (+5 more)
examples/basic/simple_server/: Cargo.toml
examples/basic/simple_server/src/: main.rs
examples/basic/src/: main.rs
examples/d2d-clock/: Cargo.toml
examples/d2d-clock/src/: clock.rs  main.rs
examples/lib_no_std/: Cargo.toml
examples/lib_no_std/src/: lib.rs
examples/no_std_com/: Cargo.toml
examples/no_std_com/src/: lib.rs
examples/safe/client/src/: main.rs
examples/safe/interface/src/: isuperman.rs
examples/safe/server/src/: clark_kent.rs  clark_kent_class.rs  lib.rs
examples/unsafe/: Cargo.toml
examples/unsafe/client/src/: main.rs
examples/unsafe/interface/src/: isuperman.rs  lib.rs
examples/unsafe/server/: Cargo.toml
examples/unsafe/server/src/: clark_kent.rs  clark_kent_class.rs  lib.rs  mod.rs
examples/unsafe/src/: main.rs
macro_tests/: Cargo.toml
macro_tests/com_interface/: no_supertrait.rs
macro_tests/src/: lib.rs
macros/: Cargo.toml
macros/aggr_co_class/: Cargo.toml
macros/aggr_co_class/src/: class_factory.rs  com_struct.rs  com_struct_impl.rs  drop_impl.rs  iunknown_impl.rs  lib.rs
macros/aggr_co_class_derive/: Cargo.toml
macros/aggr_co_class_derive/src/: class_factory.rs  com_struct.rs  com_struct_impl.rs  deref_impl.rs  drop_impl.rs  iunknown_impl.rs  lib.rs
macros/co_class/: Cargo.toml
macros/co_class/src/: class_factory.rs  co_class_impl.rs  com_struct.rs  com_struct_impl.rs  deref_impl.rs  drop_impl.rs  iunknown_impl.rs  lib.rs
macros/co_class_derive/: Cargo.toml
macros/co_class_derive/src/: class_factory.rs  com_struct.rs  com_struct_impl.rs  deref_impl.rs  drop_impl.rs  iunknown_impl.rs  lib.rs
macros/com_interface/: Cargo.toml
macros/com_interface/src/: interface_impl.rs  vtable.rs
macros/com_interface_attribute/: Cargo.toml
macros/com_interface_attribute/src/: com_interface_impl.rs  comptr_impl.rs  iid.rs  lib.rs  vtable.rs  vtable_macro.rs
macros/macro_utils/: Cargo.toml
macros/macro_utils/src/: idents.rs  lib.rs
macros/src/: lib.rs
macros/support/: Cargo.toml
macros/support/src/: lib.rs  test_utils.rs  tests.rs
macros/support/src/aggr_co_class/: class_factory.rs  com_struct.rs  com_struct_impl.rs  iunknown_impl.rs  mod.rs
macros/support/src/class/: class.rs  class_constructor.rs  class_factory.rs  iunknown_impl.rs  mod.rs  tests.rs
macros/support/src/co_class/: class_factory.rs  co_class.rs  co_class_constructor.rs  co_class_impl.rs  com_struct.rs  com_struct_impl.rs  iunknown_impl.rs  mod.rs
macros/support/src/com_interface/: com_interface_impl.rs  iid.rs  interface.rs  interface_impl.rs  mod.rs  vptr.rs  vtable.rs  vtable_macro.rs
macros/support/src/interface/: iid.rs  interface.rs  interface_impl.rs  interfaces.rs  mod.rs  vptr.rs  vtable.rs
macros/support/src/test_utils/: rustfmt.rs
macros/support/src/tests/: rustfmt.rs
macros/support/src/utils/: idents.rs  mod.rs
macros/tests/: generic_co_class.rs  no_supertrait.rs  no_supertrait.stderr  non_string_guid.rs  non_string_guid.stderr  progress.rs  supertrait_path.rs  unsafe-traits.rs
server/: Cargo.toml
server/src/: implementation.rs  lib.rs
server/src/implementation/: british_short_hair_cat.rs  british_short_hair_cat_class.rs  local_file_manager.rs  local_file_manager_class.rs  mod.rs  windows_file_manager.rs  windows_file_manager_class.rs
server/src/interface/: ianimal.rs  icat.rs  icat_class.rs  idomesticanimal.rs  iexample.rs  ifilemanager.rs  ilocalfilemanager.rs  mod.rs
src/: abi_transferable.rs  com_interface.rs  com_interface_param.rs  comlibrary.rs  comoutptr.rs  comptr.rs  iclassfactory.rs  inproc.rs  interface.rs  interface_ptr.rs  interface_rc.rs  iunknown.rs  lib.rs  offset.rs  param.rs  production.rs  ptr.rs  rc.rs  refcounting.rs  registration.rs  runtime.rs  sys.rs
src/interfaces/: iclass_factory.rs  iunknown.rs  mod.rs
src/production/: class.rs  co_class.rs  offset.rs  registration.rs
src/traits/: abi_transferable.rs  interface.rs  mod.rs
tests/: progress.rs  unsafe-traits.rs
tests/ui/fail/: no_supertrait.rs  no_supertrait.stderr  non_string_guid.rs  non_string_guid.stderr
tests/ui/pass/: class_fields.rs  interface_chains.rs  interface_eq.rs  multiversion.rs  param-refcount.rs  refcounting.rs  supertrait_path.rs
(+7 files in other folders)
