[package]
name = "com"
version = "0.2.0"
authors = ["Microsoft Corp."]
description = """
Utilities for implementing COM Client and Servers
"""
edition = "2018"
repository = "https://github.com/microsoft/com-rs"
categories = ["os::windows-apis"]
keywords = ["windows", "ffi", "com"]
license = "MIT"
readme = "./README.md"

[dependencies]
com_macros = { version = "0.2", path = "macros" }

[features]
production = []

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0.13"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[workspace]
members = [
    "macros",
    "macros/support",
]
