[package]
name = "com_interface_attribute"
version = "0.1.0"
authors = ["adrianwithah <lim.weiheng.hadrian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.4", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.1"

