[package]
name = "com_macros"
version = "0.2.0"
authors = ["Microsoft Corp."]
edition = "2018"
description = """
COM crate macros
"""
license = "MIT"
keywords = ["windows", "ffi", "com", "macros"]
repository = "https://github.com/microsoft/com-rs"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0.13"
com = { version = "0.2", path = ".." }

[dependencies]
syn = { version = "1.0.5", features = ["full"] }
proc-macro2 = "1.0.1"
com_macros_support = { version = "0.2", path = "support" }