[package]
name = "d2d-clock"
version = "0.1.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com = { path = "../.." }
winapi = { version  = "0.3", features = ["combaseapi", "d2d1", "impl-default", "dxgi", "winuser", "d3d11", "dxgi1_2", "profileapi", "libloaderapi", "errhandlingapi", "sysinfoapi"] }

[workspace]