[package]
name = "d2d-clock"
version = "0.1.0"
edition = "2018"

[dependencies]
com = { path = "../.." }
winapi = { version  = "0.3", features = ["combaseapi", "d2d1", "impl-default", "dxgi", "winuser", "d3d11", "dxgi1_2", "profileapi", "libloaderapi", "errhandlingapi", "sysinfoapi"] }
winit = "0.22"
raw-window-handle = "0.3"
