[package]
name = "com_macros_support"
version = "0.2.0"
authors = ["Microsoft Corp."]
edition = "2018"
description = """
Support library for COM crate macros
"""
license = "MIT"
keywords = ["windows", "ffi", "com", "macros"]
repository = "https://github.com/microsoft/com-rs"

[dependencies]
syn = { version = "1.0.5", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.1"
