[package]
name = "client"
version = "0.1.0"
authors = ["Microsoft Corp"]
edition = "2018"

[dependencies]
com = { path = "../../.." }
interface = { path = "../interface" }
server = { path = "../server" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winreg"] }
